# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robojax"
description = "A high-performance Jax based reinforcement learning library built for robotic learning"
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "Stone Tao", email = "stonezt2019@gmail.com" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "Robotics", "Jax", "RL", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "numpy >=1.22.0",
    "scipy",

    # RL
    "gymnasium",

    # Jax Related
    "chex",
    "distrax",
    "flax",
    "optax",

    # Video generation
    "moviepy",

    # Exp tracking
    "tensorboard",
    "wandb",
    "omegaconf",

    # Vision
    "opencv-python",
    "transforms3d",
    
    # Other
    "tqdm",
    "dacite",
    "matplotlib"
]
dynamic = ["version"]

[project.optional-dependencies]

mani-skill2 = ["mani_skill2"]
dm-control = ["dm_control"]
brax = ["brax", "gymnax"]
gymnax = ["gymnax"]

dev = ["ipdb", "jupyterlab", "ipython"]


[project.urls]
Homepage = "https://github.com/StoneT2000/robojax"
Repository = "https://github.com/StoneT2000/robojax"
"Bug Report" = "https://github.com/StoneT2000/robojax/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["gymnasium", "gymnasium.*"]

# [tool.setuptools.package-data]

# Linters and Test tools #######################################################

[tool.black]
safe = true

[tool.isort]
atomic = true
profile = "black"
src_paths = ["robojax", "scripts"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3