[project]
name = "robojax"
version = "0.1.0"
description = "A reinforcement learning library in jax specialized for robotic learning"
authors = [
  { name = "Stone Tao", email = "stonezt2019@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["reinforcement learning", "robotics", "research", "artificial intelligence"]